issue-171 updates active color and logo placement on mobile

--- a/app/components/search.component.css
+++ b/app/components/search.component.css
@@ -19,7 +19,7 @@
     padding-bottom: 2px;
 }
 .nav-active {
-    opacity: 0.7;
+    background-color: #483D8B !important;
 }
 .navbar-nav .nav-item+.nav-item {
     margin-left: 0px;
